--- a/app/src/main/res/layout/top_title.xml
+++ b/app/src/main/res/layout/top_title.xml
@@ -15,10 +15,14 @@
 
     <TextView
         android:id="@+id/title_name"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
         android:text="更多"
+        android:singleLine="true"
+        android:ellipsize="end"
         android:textColor="@color/text_color_white"
         android:textSize="18sp" />
 
