--- a/app/src/main/res/layout/activity_follow_apply_ok.xml
+++ b/app/src/main/res/layout/activity_follow_apply_ok.xml
@@ -54,43 +54,49 @@
                         android:gravity="center_vertical"
                         android:layout_marginLeft="10dp" />
                 </LinearLayout>
-
-                <TextView
-                    android:text="为患者选择分组"
-                    android:paddingLeft="15dp"
-                    android:layout_marginTop="40dp"
-                    android:textSize="@dimen/text_size_22"
-                    android:textColor="#545454"
-                    android:layout_width="match_parent"
-                    android:layout_height="60dp"
-                    android:gravity="center_vertical" />
-
-                <com.hxqydyl.app.ys.ui.scrollviewandgridview.MyScrollListView
-                    android:id="@+id/lvGroup"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-
                 <LinearLayout
-                    android:id="@+id/llAddGroup"
-                    android:background="@color/color_home_topbar"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginLeft="25dp"
-                    android:layout_marginRight="25dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:gravity="center">
-                    <ImageView
-                        android:src="@mipmap/btn_add_white"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent" />
+                    android:id="@+id/llGroupArea"
+                    android:orientation="vertical"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
                     <TextView
-                        android:text="新增分组"
-                        android:textSize="@dimen/text_size_20"
-                        android:textColor="@color/white"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:gravity="center_vertical"
-                        android:layout_marginLeft="10dp" />
+                        android:text="为患者选择分组"
+                        android:paddingLeft="15dp"
+                        android:layout_marginTop="40dp"
+                        android:textSize="@dimen/text_size_22"
+                        android:textColor="#545454"
+                        android:layout_width="match_parent"
+                        android:layout_height="60dp"
+                        android:gravity="center_vertical" />
+                    <com.hxqydyl.app.ys.ui.scrollviewandgridview.MyScrollListView
+
+                        android:id="@+id/lvGroup"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                    <LinearLayout
+
+                        android:id="@+id/llAddGroup"
+                        android:background="@color/color_home_topbar"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginLeft="25dp"
+                        android:layout_marginRight="25dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:gravity="center">
+                        <ImageView
+                            android:src="@mipmap/btn_add_white"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent" />
+                        <TextView
+                            android:text="新增分组"
+                            android:textSize="@dimen/text_size_20"
+                            android:textColor="@color/white"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:gravity="center_vertical"
+                            android:layout_marginLeft="10dp" />
+                    </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
         </ScrollView>
