--- a/app/src/main/res/layout/item_evpi_photo_gridview.xml
+++ b/app/src/main/res/layout/item_evpi_photo_gridview.xml
@@ -6,6 +6,7 @@
 
     <ImageView
         android:id="@+id/imge"
+        android:background="@drawable/default_image"
         android:layout_width="70dp"
         android:layout_height="70dp" />
 </LinearLayout>
