--- a/app/src/main/res/layout/item_evpi_photo_gridview.xml
+++ b/app/src/main/res/layout/item_evpi_photo_gridview.xml
@@ -7,5 +7,6 @@
     <ImageView
         android:id="@+id/imge"
         android:layout_width="70dp"
-        android:layout_height="70dp" />
+        android:layout_height="70dp"
+        android:scaleType="fitXY"/>
 </LinearLayout>
