--- a/app/src/main/res/layout/item_medicine_dosage.xml
+++ b/app/src/main/res/layout/item_medicine_dosage.xml
@@ -13,6 +13,7 @@
         android:id="@+id/etDay"
         android:text="1"
         android:textSize="@dimen/text_size_16"
+        android:maxLength="3"
         android:inputType="number"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
@@ -31,8 +32,9 @@
         android:id="@+id/etSize"
         android:text="40"
         android:textSize="@dimen/text_size_16"
-        android:inputType="number"
+        android:inputType="numberDecimal"
         android:layout_marginRight="5dp"
+        android:maxLength="5"
         android:background="@drawable/bg_edittext"
         android:gravity="center"
         android:layout_marginLeft="20dp"
