--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -37,7 +37,7 @@
 		android:layout_width="140dp"
 		android:layout_height="40dp"
 		android:background="@drawable/btn_orange"
-		android:text="立即咨询"
+		android:text="立即体验"
 		android:textSize="@dimen/text_size_18"
 		android:textColor="@color/white"
 		android:layout_alignParentBottom="true"
