--- a/app/src/main/res/layout/home_info_top.xml
+++ b/app/src/main/res/layout/home_info_top.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="80dp"
     android:background="@color/color_home_info_background"
-    android:gravity="center_vertical"
+    android:gravity="center"
     android:orientation="horizontal"
     android:visibility="gone">
 
@@ -12,13 +12,12 @@
         android:id="@+id/head_img"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginLeft="20dp"
         android:src="@mipmap/portrait_man" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="18dp"
+        android:layout_marginLeft="@dimen/space_20"
         android:orientation="vertical">
 
         <TextView
@@ -27,13 +26,13 @@
             android:layout_height="wrap_content"
             android:text="徐春晖"
             android:textColor="@color/text_color_white"
-            android:textSize="16sp"
+            android:textSize="@dimen/text_size_16"
             android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/space_8"
             android:orientation="horizontal">
 
             <TextView
@@ -41,16 +40,16 @@
                 android:layout_height="wrap_content"
                 android:text="患者:"
                 android:textColor="@color/text_color_white"
-                android:textSize="12sp" />
+                android:textSize="@dimen/text_size_12" />
 
             <TextView
                 android:id="@+id/sufferer_num"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="@dimen/space_10"
                 android:text="15"
                 android:textColor="@color/text_color_white"
-                android:textSize="12sp" />
+                android:textSize="@dimen/text_size_12" />
 
             <ImageView
                 android:layout_width="1dp"
